--- a/requirements.txt
+++ b/requirements.txt
@@ -1,13 +1,5 @@
-conda create --name tf2-dcase python=3.6
-conda activate tf2-dcase
-conda install ipython
-conda install numpy
-conda install tensorflow-gpu=2.1.0
-conda install -c anaconda cudatoolkit
-conda install -c anaconda cudnn
-pip install librosa
-pip install absl-py==0.9.0
-pip install dcase_util==0.2.12
-pip install sed_eval
-pip install pyyaml==5.3.1
+tensorflow-gpu==2.1.0
+absl-py>=0.9.0
+sed_eval>=0.2.0
+pyyaml==5.3.1
 
